gap fixed

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ main {
     height: 50vh;
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 30px;
 
 }
 
